# EPI-DevorApp

./: .gitlab-ci.yml  CLAUDE.md  README.md  deploy.ps1  deploy.sh  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml  verificar_usuarios.py
backend/alembic/: env.py
backend/alembic/versions/: 327df2edf9d9_add_icono_to_listas_favoritos.py
backend/app/: initialize_db.py  main.py
backend/app/core/: config.py  security.py
backend/app/data/: tags.json
backend/app/infrastructure/: google_places_client.py  keras_api_client.py
backend/app/infrastructure/firebase/: firebase_admin.py
backend/app/infrastructure/repositories/: favoritos_repo.py  mas_tarde_repo.py  usuario_repo.py  valoracion_repo.py
backend/app/models/dtos/: auth_dto.py  favoritos_dto.py  historial_dto.py  mas_tarde_dto.py  recommendation_dto.py  valoracion_dto.py
backend/app/models/entities/: favoritos.py  listas_favoritos.py  mas_tarde.py  usuarios.py  valoracion.py  valoracion_like.py
backend/app/presentation/routers/: auth_router.py  favoritos_router.py  historial_router.py  mas_tarde_router.py  recommendation_router.py  valoraciones_router.py
backend/app/services/: auth_service.py  favoritos_service.py  mas_tarde_service.py  recommendation_service.py  valoracion_service.py
backend/tests/: conftest.py  test_auth_router.py  test_auth_service.py  test_favoritos_router.py  test_favoritos_service.py  test_historial_router.py  test_infrastructure.py  test_main.py  test_recommendation_router.py  test_recommendation_service.py  test_valoracion_router.py  test_valoracion_service.py
docs/: conf.py  index.rst  userrequirements_en.txt  userrequirements_es.txt
docs/api/: core.rst  infrastructure.rst  main.rst  models.rst  routers.rst  services.rst
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  capacitor.config.ts  eslint.config.js  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/android/: build.gradle
frontend/android/app/: build.gradle
frontend/e2e/: favorites.spec.ts  history.spec.ts  login.spec.ts  profile.spec.ts  rating.spec.ts  recommendation.spec.ts  register.spec.ts  sidemenu.spec.ts
frontend/fastlane/: Appfile  Fastfile
frontend/src/: App.css  App.tsx
frontend/src/components/: Login.tsx  NotificationSystem.tsx  ProtectedRoute.tsx  SideMenu.tsx  (+2 more)
keras-api/: .dockerignore  Dockerfile  main.py  places_cache.json  prueba.py  requirements.txt  test_main.py  test_train_pipeline.py  train_pipeline.py
keras-api/models/: modelo_prod.h5  place_mapping.json  rest_mapping.json  user_mapping.json
(+44 files in other folders)
