[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Alejandro",email = "UO294431@uniovi.es"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard] (>=0.129.0,<0.130.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "pyjwt (>=2.11.0,<3.0.0)",
    "firebase-admin (>=6.6.0,<7.0.0)",
    "httpx (>=0.28.0,<1.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.28.0"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
