[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Alejandro",email = "UO294431@uniovi.es"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard] (>=0.129.0,<0.130.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "pyjwt (>=2.11.0,<3.0.0)",
    "firebase-admin (>=6.6.0,<7.0.0)",
    "httpx (>=0.28.0,<1.0.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "alembic (>=1.18.5,<2.0.0)",
]


[tool.poetry]
packages = [{include = "app"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[dependency-groups]
dev = [
    "pytest (>=8,<9)",
    "pytest-asyncio (>=0.23,<0.24)",
    "pytest-cov (>=5.0.0,<6.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "sphinx (>=8.0.0)",
    "sphinx-rtd-theme (>=3.0.0)"
]

[tool.pyrefly]
search-path = ["src"]
site-package-path = [
  "C:/Users/Alex/AppData/Local/pypoetry/Cache/virtualenvs/backend-SYbF3jEy-py3.14/Lib/site-packages"
]
